@@ -13,6 +13,7 @@ Version 1.2
   - Revert "Kill dead online components" breaks the Qt5 build [BUG-62];
   - Do not build wineappdb core components if -DWITH_WINEAPPDB=OFF is set [BUG-62];
   - 'Run -> Browser' on Programs window not work [BUG-54];
+  - QT5: Winetricks application list fails to refresh and causes segfault on quit [BUG-53];
 
 Version 1.1-r2
  Fixed:
